Updated in signup for addlisting, sponsored ad and add treatment center after login

--- a/app/addListing/paidMember/view.html
+++ b/app/addListing/paidMember/view.html
@@ -6,6 +6,19 @@
     <div class="adn-row">
       <table class="table table-bordered membership-table">
         <thead>
+          <tr style="border:none;">
+            <th>
+            </th>
+            <th class=""> </th>
+            <th class="highlight-plan1" style="text-align:center;">
+              <img src="/themes/addiction/images/Gold-Membership.png" width="80">
+
+            </th>
+            <th class="" style="text-align:center;">
+              <img src="/themes/addiction/images/Platinum-Membership.png" width="80">
+            </th>
+          </tr>
+
           <tr>
             <th>
               <div class="pricing-header ">
@@ -32,7 +45,7 @@
                   Sponsored
                 </h4>
                 <p class="package-billing">
-                  <button type="button" ng-click="$ctrl.submit()" class="btn btn-success">Sign Up</button>
+                  <button type="button" ng-click="$ctrl.sponsored()" class="btn btn-success">Sign Up</button>
                 </p>
               </div>
             </th>
@@ -42,7 +55,7 @@
                   Featured
                 </h4>
                 <p class="package-billing">
-                  <button type="button" ng-click="$ctrl.submit()" class="btn btn-success">Sign Up</button>
+                  <button type="button" ng-click="$ctrl.featured()" class="btn btn-success">Sign Up</button>
                 </p>
               </div>
             </th>
