--- a/app/addListing/view.html
+++ b/app/addListing/view.html
@@ -14,12 +14,18 @@
         </div>
       </form>
       <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12" ng-init="$ctrl.membershipNoadvertisement = 0" ng-show="$ctrl.membershipNoadvertisement !== 1">
-        <div class="side-card">
+        <div class="side-card ">
           <card-heading>Advertisements</card-heading>
         </div>
         <div class="banner_adjust">
           <img class="img-responsive" id="sidebar_ad">
         </div>
+        <!-- <div class="banner_adjust1 sticky-phone" ng-if="$root.activeLink === 'Contact'">
+          <a href="tel:877-649-0306">
+            <img class="img-responsive " src="themes/addiction/images/animated-telephone.gif">
+          </a>
+        </div> -->
+
       </div>
     </div>
   </div>
