Added call now button

--- a/app/index.html
+++ b/app/index.html
@@ -189,7 +189,19 @@
   <body>
     <!-- First and second navigation -->
     <header></header>
-
+    <div class="wp-flybox_tab" id="tab1" style="width: auto; display: inline-block; overflow: hidden; position: fixed; border: 0px none; right: -21px; top: 50%; z-index: 99991;">
+      <p class="call_now_text">Call Now</p>
+      <div style="height:10px;width:36px;display:inline-block;inline-block;float:right;"></div>
+      <div class="wp_but">
+        <a href="tel:+877-649-1483">
+          <img src="themes/addiction/images/call_us.png" style="height:65px; border-radius:100%;margin-left:20px;" alt="Call Us">
+        </a>
+        <a href="tel:+877-649-1483">
+          <p class="call_now_phone">877-649-1483</p>
+        </a>
+      </div>
+      <div style="float:left;"></div>
+    </div>
     <!--    Sign In    -->
     <div class="modal fade margin_top_to_modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-sm">
@@ -483,6 +495,7 @@
         e.parentNode.insertBefore(n, e);
       })(document, "script", "hs-analytics", 300000);
     </script>
+
     <!-- End of Async HubSpot Analytics Code -->
   </body>
 
