--- a/app/addListing/paymentDetail/view.html
+++ b/app/addListing/paymentDetail/view.html
@@ -9,14 +9,17 @@
       <div class="col-md-3 col-sm-3 col-xs-12">
         <label for="name">Card Number: </label>
       </div>
-      <div class="col-md-9 col-sm-9 col-xs-12">
-        <input placeholder="Card Number" class="form-control" type="text" ng-change="$root.detectCardType($root.card)" ng-minlength="15" ng-maxlength="16" ng-model="$root.card" ng-pattern="/^[0-9]+$/" required="" name="card" maxlength="16">
+      <div class="col-md-8 col-sm-9 col-xs-12 ">
+        <div class="">
+          <input placeholder="Card Number" style="float: left;" class="form-control" type="text" ng-keydown="$root.detectCardType($root.card, $event)" ng-change="" ng-maxlength="19" ng-model="$root.card" ng-pattern="/^[0-9' ']+$/" required="" name="card" maxlength="19" autocomplete="off">
+          <i style="font-size: 40px; margin-top: -10px; color: #58aa22; position: absolute; margin-left: -43px;" class="icon large icon-{{$ctrl.cardType}}-card"></i>
+        </div>
         <p ng-show="$root.addlistForm.card.$invalid" class="help-block">Invalid Card number</p>
-        <p ng-if="($root.addlistForm.card.totalDigits<15 || $root.addlistForm.card.totalDigits>18) && $root.addlistForm.card.$valid" class="help-block">Card number must be 15~18 digits.</p>
-        <p ng-show="$root.cardType" class="help-block">{{$root.cardType[0].niceType}}</p>
+        <p ng-if="($ctrl.totalDigits<19 || $ctrl.totalDigits>19) && $root.addlistForm.card.$valid" class="help-block">Card must be have 16 digits.</p>
+        <!-- <p ng-show="$root.cardType" class="help-block">{{$root.cardType[0].niceType}}</p> -->
         <p ng-if="!$root.cardType[0] && $root.$valid" class="help-block">Invalid card type</p>
-
       </div>
+
     </div>
 
     <div class="adn-row">
@@ -24,15 +27,15 @@
         <label for="name">Name: </label>
       </div>
       <div class="col-md-3 col-sm-3 col-xs-12">
-        <input placeholder="First Name" name="firstName" class="form-control" type="text" ng-model="$root.firstName" ng-minlength="2" ng-maxlength="25" required="">
+        <input placeholder="First Name" name="firstName" class="form-control" type="text" ng-model="$root.firstName" ng-minlength="2" ng-maxlength="25" required="" autocomplete="off">
         <p ng-show="$root.addlistForm.firstName.$invalid" class="help-block"> First Name</p>
       </div>
       <div class="col-md-3 col-sm-3 col-xs-12">
-        <input placeholder="Middle Name" name="middleName" class="form-control" type="text" ng-model="$root.middleName" ng-maxlength="20">
+        <input placeholder="Middle Name" name="middleName" class="form-control" type="text" ng-model="$root.middleName" ng-maxlength="20" autocomplete="off">
         <span ng-show="$root.addlistForm.middleName.$invalid" class="help-block">Max-length(20) reached</span>
       </div>
       <div class="col-md-3 col-sm-3 col-xs-12">
-        <input placeholder="Last Name" name="lastName" class="form-control" type="text" ng-model="$root.lastName" ng-minlength="2" ng-maxlength="25" required="">
+        <input placeholder="Last Name" name="lastName" class="form-control" type="text" ng-model="$root.lastName" ng-minlength="2" ng-maxlength="25" required="" autocomplete="off">
         <p ng-show="$root.addlistForm.lastName.$invalid" class="help-block"> Last Name</p>
       </div>
     </div>
@@ -106,7 +109,7 @@
     <div class="adn-row">
       <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
         <input class="btn modal_btn btn_size pull-left" value="Previous" type="button" ng-click="$ctrl.previous()">
-        <button type="button" ng-click="$root.submit()" class="btn modal_btn btn_size pull-left" value="Next" id="submit" ng-disabled="$root.addlistForm.card.$invalid || $root.addlistForm.year.$invalid || paymentDetailsForm.month.$invalid || $root.addlistForm.cvv.$invalid || paymentDetailsForm.firstName.$invalid || $root.addlistForm.middleName.$invalid || $root.addlistForm.lastName.$invalid">Next</button>
+        <button type="button" ng-click="$root.submit()" class="btn modal_btn btn_size pull-left" value="Next" id="submit" ng-disabled="$root.addlistForm.card.$invalid || ($ctrl.totalDigits<19) ||  $root.addlistForm.year.$invalid || paymentDetailsForm.month.$invalid || $root.addlistForm.cvv.$invalid || paymentDetailsForm.firstName.$invalid || $root.addlistForm.middleName.$invalid || $root.addlistForm.lastName.$invalid">Next</button>
       </div>
     </div>
     <!--</form>-->
