--- a/app/addListing/sponsoredPage/view.html
+++ b/app/addListing/sponsoredPage/view.html
@@ -15,6 +15,9 @@
       </div>
     </div>
 
+    <!-- Search By State Section -->
+    <sponsored-state-select></sponsored-state-select>
+
     <!-- <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub pading_0">
             <div class="col-md-4 col-sm-4 col-xs-12">
               <label for="tname"> Sponsor Ads: </label>
@@ -25,7 +28,7 @@
             </div>
           </div> -->
 
-    <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+    <!-- <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
       <div class="col-md-4 col-sm-4 col-xs-12">
         <label for="tname"> Normal: </label>
       </div>
@@ -49,20 +52,20 @@
       <div class="col-md-8 col-sm-8 col-xs-12">
         <div ng-dropdown-multiselect="" options="$ctrl.sponsoredAdCounty" checkboxes="true" selected-model="$ctrl.sponsoredAdCountyModel" extra-settings="$ctrl.multiselectModelSettings"></div>
       </div>
-    </div>
-    <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+    </div> -->
+    <!-- <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
       <div class="col-md-4 col-sm-4 col-xs-12">
         <label for="cpwd">City: </label>
-      </div>
-      <!-- <div class="col-md-8 col-sm-8 col-xs-12">
+      </div> -->
+    <!-- <div class="col-md-8 col-sm-8 col-xs-12">
               <searchandselect selecteditem="$ctrl.city" values="$ctrl.cities" key="Key" totalrecords="$ctrl.totalRecords" onscroll="getCities($ctrl.searchKey, pagenumber)"> </searchandselect>
             </div> -->
-      <div class="col-md-8 col-sm-8 col-xs-12" infinite-scroll="$ctrl.loadMore()" infinite-scroll-distance="1" infinite-scroll-use-document-bottom="true" infinite-scroll-container="$ctrl.testScroll">
+    <!-- <div class="col-md-8 col-sm-8 col-xs-12" infinite-scroll="$ctrl.loadMore()" infinite-scroll-distance="1" infinite-scroll-use-document-bottom="true" infinite-scroll-container="$ctrl.testScroll">
         <div id="city" name="city" ng-dropdown-multiselect="" options="$ctrl.sponsoredAdCity" ng-click="$event.stopPropagation()" checkboxes="true" selected-model="$ctrl.sponsoredAdCityModel" extra-settings="$ctrl.multiselectModelSettings"></div>
       </div>
-      <div class="col-md-8 col-sm-8 col-xs-12">
+      <div class="col-md-8 col-sm-8 col-xs-12"> -->
 
-        <!-- <p>Selected: {{ctrl.country.selected}}</p>
+    <!-- <p>Selected: {{ctrl.country.selected}}</p>
               <ui-select ng-model="ctrl.country.selected" theme="selectize" ng-disabled="ctrl.disabled" style="width: 300px;" title="Choose a country">
                 <ui-select-match placeholder="Select or search a country in the list...">{{$select.selected.name}}</ui-select-match>
                 <ui-select-choices repeat="country in ctrl.countries | filter: $select.search">
@@ -71,10 +74,10 @@
                 </ui-select-choices>
               </ui-select> -->
 
-      </div>
+    <!-- </div> -->
 
-
-    </div>
+    <!--
+    </div> -->
     <!-- <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
             <div class="col-md-4 col-sm-4 col-xs-12">
               <label for="cpwd">Sidepanel: </label>
