added silver image under free

--- a/app/addListing/paidMember/view.html
+++ b/app/addListing/paidMember/view.html
@@ -9,12 +9,14 @@
           <tr style="border:none;">
             <th>
             </th>
-            <th class=""> </th>
-            <th class="highlight-plan1" style="text-align:center;">
+            <th class="text-center">
+              <img src="/themes/addiction/images/silver_membership.png" width="80">
+            </th>
+            <th class="text-center">
               <img src="/themes/addiction/images/Gold-Membership.png" width="80">
 
             </th>
-            <th class="" style="text-align:center;">
+            <th class="text-center">
               <img src="/themes/addiction/images/Platinum-Membership.png" width="80">
             </th>
           </tr>
