--- a/app/addListing/cartDetail/view.html
+++ b/app/addListing/cartDetail/view.html
@@ -22,7 +22,7 @@
 
           <div class="row" ng-repeat="(key,state) in $root.statesSel">
             <div class="col-xs-2">
-              <img class="img-responsive" ng-src="themes/addiction/images/{{state}}.png">
+              <img class="img-responsive" ng-src="themes/addiction/images/{{$root.statesDetail[key].state_name}}.png">
             </div>
             <div class="col-xs-4">
               <h4 class="product-name">
