updated cart removed console

--- a/app/addListing/cartDetail/view.html
+++ b/app/addListing/cartDetail/view.html
@@ -11,7 +11,7 @@
                   <span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart</h5>
               </div>
               <div class="col-xs-6">
-                <button type="button" class="btn btn-primary btn-sm btn-block">
+                <button type="button" ng-click="$ctrl.continueShop()" class="btn btn-primary btn-sm btn-block">
                   <span class="glyphicon glyphicon-share-alt"></span> Continue shopping
                 </button>
               </div>
