--- a/app/addListing/centerDetails/view.html
+++ b/app/addListing/centerDetails/view.html
@@ -42,7 +42,7 @@
     <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
       <input class="btn modal_btn btn_size pull-left" value="Previous" type="button" ng-click="$ctrl.previous()">
       <input class="btn modal_btn btn_size pull-right" value="Next" id="submit" type="button" ng-click="$root.submit()" ng-disabled="$root.addlistForm.content_1.$error.required || $root.addlistForm.content_2.$error.required || $root.addlistForm.content_3.$error.required">
-
+      <!--<input type="button" value="Popup" ng-click="$root.popup()">-->
     </div>
     <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub">
       <footer-ad></footer-ad>
