added signup changes

--- a/app/addListing/paidMember/view.html
+++ b/app/addListing/paidMember/view.html
@@ -1,13 +1,11 @@
 <div class="row">
   <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
     <div class="adn-row">
-      <h3 class="sub_heading_under_sign_up">Choose your plan :</h3>
-    </div>
-    <div class="adn-row">
       <table class="table table-bordered membership-table">
         <thead>
           <tr style="border:none;">
             <th>
+              <h3 class="sub_heading_under_sign_up text-center">Choose your plan :</h3>
             </th>
             <th class="text-center">
               <img src="/themes/addiction/images/silver_membership.png" width="80">
@@ -72,7 +70,8 @@
           </tr>
           <tr>
             <td>Email Display</td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
+            </td>
             <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
             <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
           </tr>
@@ -86,42 +85,15 @@
           </tr>
           <tr>
             <td>Address Display</td>
-            <td><i class="fa fa-times-circle" aria-hidden="true"></i></td>
-            <td class="highlight-plan"><i class="fa fa-times-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
+            </td>
+            <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
             <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
           </tr>
           <tr class="tr-background">
-            <td class="feature-label">Linking to your webpage</td>
-            <td></td>
-            <td class=""></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Social links to Facebook</td>
-            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
+            <td class="feature-label">
+              Ability to sponsor on pages
             </td>
-            <td class="highlight-plan"><i class="fa fa-times-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
-            </td>
-          </tr>
-          <tr>
-            <td>Social links to Twitter</td>
-            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
-            </td>
-            <td class="highlight-plan"><i class="fa fa-times-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
-            </td>
-          </tr>
-          <tr>
-            <td>Social links to Instagram</td>
-            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
-            </td>
-            <td class="highlight-plan"><i class="fa fa-times-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
-            </td>
-          </tr>
-          <tr class="tr-background">
-            <td class="feature-label">Ability to sponsored pages</td>
             <td></td>
             <td class=""></td>
             <td></td>
@@ -143,7 +115,47 @@
             </td>
           </tr>
           <tr>
-            <td>County</td>
+            <td>Demographic</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
+            </td>
+            <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>Setting</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
+            </td>
+            <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>Payment</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
+            </td>
+            <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>By Drug</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
+            </td>
+            <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>Additional Services</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
+            </td>
+            <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>Treatment Approach</td>
             <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
             <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
@@ -151,26 +163,61 @@
             </td>
           </tr>
           <tr class="tr-background">
-            <td class="feature-label">Ability to advertise of website</td>
-            <td><i class="fa fa-times-circle" aria-hidden="true"></i></td>
-            <td class=""><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-          </tr>
-          <tr class="tr-background">
-            <td class="feature-label">Features</td>
+            <td class="feature-label">Linking to your webpage</td>
             <td></td>
             <td class=""></td>
             <td></td>
           </tr>
           <tr>
-            <td>Display top 9 center as best center</td>
-            <td class="bottomLine-free"><i class="fa fa-times-circle" aria-hidden="true"></i>
+            <td>Social links to Facebook</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
-            <td class="highlight-plan bottomLine-sponsored"><i class="fa fa-times-circle" aria-hidden="true"></i></td>
-            <td class="bottomLine-featured"><i class="fa fa-check-circle" aria-hidden="true"></i>
+            <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
-
+          <tr>
+            <td>Social links to Twitter</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
+            </td>
+            <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
+          <tr>
+            <td>Social links to Instagram</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i>
+            </td>
+            <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
+          <tr class="tr-background">
+            <td class="feature-label">Banner Ads</td>
+            <td></td>
+            <td class=""><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+          </tr>
+          <tr>
+            <td>Ability to advertise</td>
+            <td class="highlight-plan"><i class="fa fa-times-circle" aria-hidden="true"></i></td>
+            <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
+          <tr class="tr-background">
+            <td class="feature-label">Treatment Center Displayed on Home Page</td>
+            <td></td>
+            <td class=""></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Displayed as top 9 best center</td>
+            <td class="highlight-plan"><i class="fa fa-times-circle" aria-hidden="true"></i></td>
+            <td class="highlight-plan"><i class="fa fa-times-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
