--- a/app/addListing/centerInfo/view.html
+++ b/app/addListing/centerInfo/view.html
@@ -28,7 +28,7 @@
         <label>Website </label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <input placeholder="www.google.com" id="center_web_link" url="true" name="center_web_link" class="form-control required" type="text" ng-model="$root.center_web_link" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:([\w]{3})+\.)+([a-z]{2,10})?(?:[\.])+([a-z/.]{2,10})$/">
+        <input placeholder="www.google.com" id="center_web_link" url="true" name="center_web_link" class="form-control required" type="text" ng-model="$root.center_web_link" ng-pattern="/^(?:(ftp|http|https):\/\/)?(?:([\w]{3})+\.)+([0-9 a-z]{2,30})?(?:[\.])+([a-z/.]{2,10})$/">
         <p ng-show="$root.addlistForm.center_web_link.$invalid" class="help-block ng-hide">Invalid Format(Correct format: www.google.com)</p>
       </div>
     </div>
@@ -48,7 +48,7 @@
       <div class="col-md-8 col-sm-8 col-xs-12">
         <!-- <input placeholder="Intake Phone" id="intakephone" name="intakephone" class="form-control required" ng-minlength="10" ng-maxlength="10" maxlength="10" ng-pattern="/^-?[0-9+]*$/" type="text" ng-model="$root.intakephone" required="true"> -->
 
-        <input placeholder="eg. (601) 521-1542" id="intakephone" name="intakephone" ng-change="$ctrl.testNum()" class="form-control required" type="text" required="true" phone-input restrict="reject" ng-minlength="14" maxlength="14" ng-model="$root.intakephone">
+        <input ng-init="" placeholder="eg. (601) 521-1542" id="intakephone" name="intakephone" ng-change="$ctrl.testNum()" class="form-control required" type="text" required="true" phone-input restrict="reject" ng-minlength="14" maxlength="14" ng-model="$root.intakephone">
         <p ng-show="$root.addlistForm.intakephone.$error.pattern || $root.addlistForm.intakephone.$error.minlength || $root.addlistForm.intakephone.$error.maxlength" class="help-block">Invalid US number.</p>
         <p ng-show="$root.addlistForm.intakephone.$error.required" class="help-block">Required</p>
       </div>
@@ -67,7 +67,8 @@
         <label for="web_link">Logo:</label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <input name="listing_image[]" id="listing_image" file-model="$root.listing_image" class="span2 text_file multi center_image" type="file" accept="image/*">
+        <input name="listing_image[]" id="listing_image" file-model="$root.listing_image" onchange="angular.element(this).scope().uploadImage(this)" class="span2 text_file multi center_image" type="file" accept="image/*">
+        <img id="logo_preview" ng-src="{{$ctrl.preview_img}}" width="100" name="logo_preview" />
       </div>
     </div>
     <div class="adn-row">
