--- a/app/addListing/contactInfo/view.html
+++ b/app/addListing/contactInfo/view.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
-      <input class="btn modal_btn btn_size pull-left" value="Next" id="submit" type="button" ng-click="$ctrl.saveStep1()" ng-disabled="$root.addlistForm.user_last_name.$error.required || $root.addlistForm.user_first_name.$error.required || $root.addlistForm.user_company.$error.required || $root.addlistForm.user_phone.$invalid">
+      <input class="btn modal_btn btn_size pull-left" value="Next" id="submit" type="button" ng-click="$root.saveStep1()" ng-disabled="$root.addlistForm.user_last_name.$error.required || $root.addlistForm.user_first_name.$error.required || $root.addlistForm.user_company.$error.required || $root.addlistForm.user_phone.$invalid">
     </div>
   </div>
 
