--- a/app/addListing/sponsoredPage/view.html
+++ b/app/addListing/sponsoredPage/view.html
@@ -10,10 +10,9 @@
         <label for="tname">Treatment Centers: </label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12 class_for_select">
-        <div ng-dropdown-multiselect="" options="$ctrl.treatmentCenters" ng-click="$event.stopPropagation()" selected-model="$ctrl.treatmentCentersModel" extra-settings="$ctrl.multiselectModelSettings" checkboxes="true"></div>
+        <div ng-dropdown-multiselect="" options="$ctrl.treatmentCenters" ng-click="$event.stopPropagation()" selected-model="$ctrl.treatmentCentersModel" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $root.centerSelect, onItemDeselect: $root.centerDeSelect}" checkboxes="true"></div>
       </div>
     </div>
-
     <!-- Search By State Section -->
     <sponsored-state-select></sponsored-state-select>
 
