--- a/app/footer/view.html
+++ b/app/footer/view.html
@@ -44,7 +44,7 @@
                 <span class="glyphicon glyphicon-chevron-right"></span>About Us</a>
             </li>
             <li>
-              <a href="http://www.addictionnetwork.com/treatment-center-list">
+              <a href="#/treatment-center-map">
                 <span class="glyphicon glyphicon-chevron-right"></span>Find Treatment</a>
             </li>
             <li>
