fixed other links in footer

--- a/app/footer/view.html
+++ b/app/footer/view.html
@@ -40,7 +40,7 @@
         <div class="about_div">
           <ul class="list-unstyled">
             <li>
-              <a href="http://www.addictionnetwork.com/about/">
+              <a href="#/about">
                 <span class="glyphicon glyphicon-chevron-right"></span>About Us</a>
             </li>
             <li>
@@ -99,13 +99,13 @@
         <div class="footer_ul">
           <ul class="list-unstyled list-inline pull-right">
             <li>
-              <a href="http://www.addictionnetwork.com">Home</a>
+              <a href="/">Home</a>
             </li>
             <li>
-              <a href="http://www.addictionnetwork.com/treatment-center-list">Treatment Center</a>
+              <a href="#/treatment-center-map">Treatment Center</a>
             </li>
             <li>
-              <a href="javascript:void(0);" data-toggle="modal" data-target="#myModal2" class="to_get_click2">Sign Up</a>
+              <a href="#/add-listing/step1" data-toggle="modal">Sign Up</a>
             </li>
             <li>
               <a href="http://www.addictionnetwork.com/contact-us">Contact Us</a>
